<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SignInActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent" >

        <TextView
            android:id="@+id/signin_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signin_header"
            android:textSize="20dp"
            android:gravity="center"
            android:layout_marginBottom="20dp" />

        <TextView
            android:id="@+id/username_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username_field_title"
            android:layout_marginBottom="5dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:id="@+id/username_input"
            android:label="@string/username_input"
            android:autofillHints=""
            android:background="?attr/colorPrimary"
            android:layout_marginBottom="10dp" />

        <TextView
            android:id="@+id/password_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_field_title"
            android:layout_marginBottom="5dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id="@+id/password_input"
            android:label="@string/password_input"
            android:autofillHints=""
            android:background="?attr/colorPrimary"
            android:layout_marginBottom="20dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_sign_in"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:text="@string/sign_in_button"
                android:background="?attr/colorPrimary"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_sign_up"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:text="@string/sign_up_button"
                android:background="?attr/colorPrimary"
                android:textColor="@color/white" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>